--- a/nr592/assignments/assignment3.Rmd
+++ b/nr592/assignments/assignment3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: |
   | NR 592
-  | Assignment 2
+  | Assignment 3
 author: "INSERT YOUR NAME HERE"
 date: "INSERT THE DATE HERE"
 output:
@@ -16,7 +16,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-_Last Updated: 2019-04-02_
+_Last Updated: 2019-04-09_
 
 ## Instructions
 
@@ -29,16 +29,17 @@ Before submitting your assignment, ensure that your code for each question works
 
 ### 1.1
 
-Find an external public data set (not included in R) that interests you and has at least 2 numeric variables. Download it and load it into R.
+Go to the page for "Cherry blossom phenology and temperature reconstructions at Kyoto": http://atmenv.envi.osakafu-u.ac.jp/aono/kyophenotemp4/
 
-If you're having trouble finding something, you can look through the data sets available at [OpenData Fort Collins](https://opendata.fcgov.com/) or the [Colorado Information Marketplace](https://data.colorado.gov/) (and filter by "Datasets" under "View Types" on the left side).
+Scroll down to the section labeled "Contents on Excel format (Newest Data)" and download the Excel files from the links labeled "Full-flowering data in Excel varsion" [sic] and "March mean temperature reconstructions (smoothed)." Place both files in your `/data` directory.
 
-**Important: Include the data file in your submission and include a link to its source here.**
+Load the flowering data into R as `cherryFlower`, designating empty strings (`""`) and hyphens (`"-"`) as missing values.
 
-```{r 1.1a, eval=FALSE, echo=TRUE}
-# Source
-Delete this and paste a link to the source of your data set here.
-```
+Load the temperature data as `cherryTemp`, designating `-50` as a missing value (Note: you may need to use `-50.00`).
+
+If you have difficulty loading the Excel sheets into R directly, you may open them in Excel and save them as CSVs (without changing the contents), and read in the CSV files.
+
+(Hint: Using an argument in your read function, you will need to skip the first several lines of each file that describe the data.)
 
 ```{r 1.1b}
 # Load data
@@ -46,13 +47,7 @@ Delete this and paste a link to the source of your data set here.
 
 ### 1.2
 
-Examine the dimensions, class, and structure of your data, using the appropriate R functions.
-
-If your data set is not already in the format of a data frame, coerce it into a data frame. If any of your variables' classes are not properly assigned, coerce them into the correct classes.
-
-Print the head of your data frame.
-
-(Hint: Check the list of "Common functions" in Lecture 02.)
+Examine the head, dimensions, and structure of each data frame.
 
 ```{r 1.2}
 
@@ -60,33 +55,11 @@ Print the head of your data frame.
 
 ### 1.3
 
-Check to see whether your data frame has any missing values. If it does, remove or replace them (using any method you choose).
+For the `cherryFlower` data frame, look at the description of each variable in the original data set and check that any variables with categorical codes are represented as factors in your data frame. If they aren't, coerce them to factors.
+
+If there appear to be any problems with the data (e.g. missing or extra rows or columns, incorrect variable names or values, improperly designated missing values, etc.), fix them before proceeding.
 
 ```{r 1.3}
-
-```
-
-### 1.4
-
-Are your data "tidy"? Why or why not (according to the "three rules")?
-
-```{r 1.4a, eval=FALSE, echo=TRUE}
-Delete this and enter your response here.
-```
-
-If not, what would you need to do to make them tidy? You do not have to actually do it, just briefly describe the steps you would take and what the final result would look like.
-
-If your data already are tidy, imagine that you were the one collecting the data. Briefly describe one thing you could have done differently, or a different way of recording the data, that could have resulted in an "un-tidy" data set.
-
-```{r 1.4b, eval=FALSE, echo=TRUE}
-Delete this and enter your response here.
-```
-
-### 1.5
-
-Subset your data frame using some criterion of your choice and assign the result to a new data frame.
-
-```{r 1.5}
 
 ```
 
@@ -95,7 +68,11 @@ Subset your data frame using some criterion of your choice and assign the result
 
 ### 2.1
 
-Choose two numeric variables in your original or subset data frame. For each of the two variables, find its mean, median, standard deviation, and range (maximum value and minimum value).
+Load the `dplyr` and `tidyr` packages (if you haven't loaded them already).
+
+Combine `cherryFlower` and `cherryTemp` by the `AD` variable, so that you have one data frame named `cherry` with all of the variables and values from both data sets.
+
+(Hint: Check the [Data Wrangling Cheat Sheet](https://www.rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf).)
 
 ```{r 2.1}
 
@@ -103,74 +80,146 @@ Choose two numeric variables in your original or subset data frame. For each of 
 
 ### 2.2
 
-For each of your two numeric variables, create a plot to visualize its distribution.
+Examine the head, dimensions, and structure of `cherry`.
 
-If the variable is discrete, create a histogram or density plot.
-
-If the variable is continuous, create a boxplot or violin plot.
+Print the data from the years (`AD`) 890 to 900 in all three data frames (`cherryFlower`, `cherryTemp`, and `cherry`) to check that the columns matched up successfully.
 
 ```{r 2.2}
 
 ```
 
-### 2.3
+<!-- ### 2.3 -->
 
-Find the correlation between your two numeric variables.
+<!-- Create a new data frame called `cherryComplete` by subsetting `cherry` to rows that:   -->
+<!-- * do not have a missing value in the "DOY" flowering date variable, and   -->
+<!-- * do not have a missing value in the estimated temperature column -->
 
-```{r 2.3}
+<!-- Print the head of this data frame. -->
+
+<!-- ### 2.4 -->
+
+<!-- Print the result of subsetting `cherry` to its complete cases to see why we could not use this method. -->
+
+
+## Question 3
+
+### 3.1
+
+Load the `ggplot2` package.
+
+Using `ggplot()` and adding a `geom` layer, create a line plot of the estimated temperature by year.
+
+Note: Pay attention to which variable should be assigned as the predictor (X) and which should be assigned as the response (Y).
+
+```{r 3.1}
 
 ```
 
-### 2.4
+### 3.2
 
-Create a scatterplot to visualize the relationship between your two numeric variables.
+Add the upper and lower limits of the 95% confidence interval for estimated temperature as a ribbon to your previous plot. Ensure the ribbon is plotted after (on top of) the line so that both are visible.
 
-```{r 2.4}
+(Hint: If you're having trouble finding the limits, check the descriptions of the variables in the original data sets.)
+
+```{r 3.2}
 
 ```
 
-### 2.5
+### 3.3
 
-Based on their correlation and by "eyeballing" the plot, do the two variables seem to be related? If so, is the relationship positive (as one variable increases, the other increases) or negative (as one variable increases, the other decreases)?
+Add two more lines to your plot to represent the temperature corrected for urban warming bias using Hikone weather station and temperature corrected using Kameoka weather station, each by year. Plot both of these before (below) your estimated temperature line.
 
-```{r 2.5, eval=FALSE, echo=TRUE}
+```{r 3.3}
+
+```
+
+### 3.4
+
+Using themes and/or individual arguments to your functions and their aesthetic mappings, adjust any or all of the:  
+
+* line colors, types, or sizes,  
+* ribbon fill or transparency ("alpha"),  
+* panel color or fill,  
+* background color or fill,  
+* or, any additional changes not listed  
+
+... so that the lines and ribbon are all easily visible and distinguishable, your plot clearly communicates the information, and your plot is aesthetically pleasing overall. You do not need to add or change titles, labels, or legends; focus on the depiction of the data.
+
+Briefly describe one change that you made as a result of the advice given by the required readings for this week.
+
+Note: There are no specific criteria here, but you should make a few improvements to avoid the examples of what makes a figure _bad_. It doesn't need to be perfect.
+
+```{r 3.4a}
+
+```
+
+```{r 3.4b, eval=FALSE, echo=TRUE}
 Delete this and enter your response here.
 ```
 
-### 2.6
 
-Are there any obvious outliers in the plot, or points that could potentially be outliers?
+## Question 4
 
-```{r 2.6, eval=FALSE, echo=TRUE}
-Delete this and enter your response here.
-```
+### 4.1
 
-### 2.7
+Using `ggplot()` and adding a `geom` layer, create a scatterplot of the flowering date (day of year) by estimated temperature. Color the points according to the data type code variable.
 
-Use the `boxplot.stats()` function to test each of your two numeric variables for outliers.
+Note: Pay attention to which variable should be assigned as the predictor (X) and which should be assigned as the response (Y).
 
-```{r 2.7}
+```{r 4.1}
 
 ```
 
-### 2.8
+### 4.2
 
-Create one additional plot of your choice depicting one or more of the variables in your data frame.
+Use a different `geom` or an argument in your current `geom` to add a small amount of vertical jitter to the points. Set horizontal jitter to zero.
 
-```{r 2.8a}
+Increase the size of the points so that they are more easily visible but don't overlap too much.
+
+```{r 4.2}
 
 ```
 
-Comment briefly on something you learned about your data from this plot.
+### 4.3
 
-```{r 2.8b, eval=FALSE, echo=TRUE}
-Delete this and enter your response here.
+Change the color scale of your points to one that is color-blind friendly, using any method you choose.
+
+```{r 4.3}
+
+```
+
+### 4.4
+
+Use `geom_smooth()` to add a regression line and 95% confidence interval to your plot before (below) your points. Choose any method other than `"auto"` (the default). Define a color for the `geom` (such as `"black"` or `"#FFFFFF"`) so that it plots one line for all of the points rather than one line per level of `color`.
+
+```{r 4.4}
+
+```
+
+### 4.5
+
+As in #3.4, make any changes you feel are necessary to improve the depiction of the data as if you were submitting this figure for publication. You must make at least one change, but do not need to explain any of them (beyond the usual requirement of commenting your code).
+
+```{r 4.5}
+
+```
+
+### 4.6 (**Extra Credit**: 1 point)
+
+Assign sensible labels to your X axis, Y axis, and legend.
+
+Add a plot title and cite the source of the data in a caption (using a function argument or another `geom`).
+
+Change the values of each level of the data type code variable displayed in the legend to something short and descriptive.
+
+```{r 4.6}
+
 ```
 
 
 <br><br>
 
 
-([pdf](./assignment2.pdf) / [Rmd](./assignment2.Rmd))
+([pdf](./assignment3.pdf) / [Rmd](./assignment3.Rmd))
 
 <div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;"></div>
