--- a/nr592/schedule_spring2019.Rmd
+++ b/nr592/schedule_spring2019.Rmd
@@ -179,8 +179,9 @@ output:
 ### Lectures
 
 * Tuesday, April 9: **[Lecture 05](./lectures/lecture05.html)** ([pdf](./lectures/lecture05.pdf) / [Rmd](./lectures/lecture05.Rmd))  
-    * [Egg data](https://science.sciencemag.org/content/suppl/2017/06/21/356.6344.1249.DC1)  
-* Thursday, April 11: **Lecture 06** (pdf / Rmd)
+    * [Egg data](https://science.sciencemag.org/content/suppl/2017/06/21/356.6344.1249.DC1) (Excel format)  
+* Thursday, April 11: **Lecture 06** (pdf / Rmd)  
+    * [Egg data](./lectures/data/aaj1945_DataS1_Egg_shape_by_species_v2.csv) (CSV format)  
 
 ### Homework
 
